# OpenDiS

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  configure.sh  contributors.html  documentation.html  genindex.html  index.html  landing_page.html  manifesto.html  objects.inv  search.html  searchindex.js
.doctrees/: contributors.doctree  documentation.doctree  environment.pickle  index.doctree  landing_page.doctree  manifesto.doctree
.doctrees/code_structure/: index.doctree  modules.doctree  project_overview.doctree
.doctrees/core_libraries/: index.doctree
.doctrees/installation/: download.doctree  index.doctree  requirements.doctree
.doctrees/tutorials/: index.doctree  initial_configuration.doctree  setting_simulation.doctree  visualizing_dislocations.doctree
.github/workflows/: documentation.yml
_sources/: contributors.md.txt  documentation.md.txt  index.rst.txt  landing_page.rst.txt
_sources/code_structure/: index.rst.txt  modules.md.txt  project_overview.md.txt
_sources/core_libraries/: index.rst.txt
_sources/installation/: download.md.txt  index.rst.txt  requirements.md.txt
_sources/tutorials/: index.rst.txt  initial_configuration.md.txt  visualizing_dislocations.md.txt
_static/: custom.css
_templates/: landing_page.html  page.html
cmake/: sys.cmake.cms3-fast  sys.cmake.ext.example  sys.cmake.lassen  sys.cmake.mc2  sys.cmake.mc2_gpu  sys.cmake.mc3  sys.cmake.mc3_ampere  sys.cmake.mc3_cpu  sys.cmake.mc3_gpu  sys.cmake.mc3_tesla  sys.cmake.rpi  sys.cmake.sherlock  sys.cmake.termux  sys.cmake.ubuntu
code_structure/: index.html  modules.html  project_overview.html
code_structure/data_structure/: disnet_class.html  disnetmanager_class.html  exadisnet_class.html  index.html  state_dictionary.html
core/paradis/: Makefile  SegmentStress.c  disnetwork.h  network.h
core/pydis/: CMakeLists.txt  Makefile
core/pydis/c/: CMakeLists.txt  Makefile
core/pydis/c/calforce/: CMakeLists.txt  Makefile
core/pydis/c/collision/: CMakeLists.txt
core/pydis/c/include/: Decomp.h  FM.h  Home.h  Init.h  Mobility.h  Param.h  Tag.h  Timer.h
core/pydis/c/remesh/: CMakeLists.txt  Makefile  Remesh.c  Stub.c
core/pydis/c/tests/: CMakeLists.txt  test_calforce.c
core/pydis/c/util/: CMakeLists.txt  DisableUnneededParams.c  InitCellDomains.c  InitCellNatives.c  Makefile  ParadisInit.c  QueueOps.c  SortNativeNodes.c  Timer.c  Util_subset.c
core/pydis/python/: CMakeLists.txt  makefile
core/pydis/python/pydis/: __init__.py  disnet.py
core/pydis/python/pydis/calforce/: calforce_disnet.py  compute_stress_analytic_paradis.py
core/pydis/python/pydis/collision/: collision_disnet.py  getmindist2_python.py
core/pydis/python/pydis/mobility/: mobility_disnet.py
core/pydis/python/pydis/nbrlist/: nbrlist.py
core/pydis/python/pydis/remesh/: remesh_disnet.py
core/pydis/python/pydis/simulate/: sim_disnet.py
core/pydis/python/pydis/timeint/: timeint_disnet.py
core/pydis/python/pydis/topology/: topology_disnet.py
core/pydis/python/pydis/visualize/: vis_disnet.py
core_libraries/: index.html
core_libraries/exadis_documentation/: index.html
core_libraries/pydis_documentation/: index.html
doc/: conf.py  documentation.md  examples.md  index.rst  installation.md  landing_page.md  landing_page.rst  manifesto.rst
doc/_static/: custom.css  custom.js
doc/_templates/: layout.html  page.html
doc/_templates /: custom.html  page.html
doc/code_structure/: data_structure.md  index.rst  modules.md  project_overview.md
doc/core_libraries/: index.rst
doc/installation/: compile.md  download.md  index.rst  requirements.md
doc/manifesto/: index.rst  manifesto.rst
doc/pydis_documentation/: index.rst
doc/tutorials/: Frank-Read.md  frank_read.md  index.rst  initial_configuration.md  setting_simulation.md  strain_hardening.md
examples/01_loop/: .gitignore  makefile  model_1_mobility.pth  test_disl_loop_exadis.py  test_disl_loop_pydis.py  test_disnet_loop.py  test_disnet_loop_hanfeng.py  test_loop.py  test_pydis_util.py
examples/02_frank_read_src/: makefile  test_cell_list.py  test_data_convert.py  test_frank_read_src.py  test_frank_read_src_exadis.py  test_frank_read_src_pydis.py  test_frank_read_src_pydis_exadis.py  test_frank_read_src_pydis_exadis_opt2.py  test_getmindist2.py
examples/03_binary_junction/: test_binary_junction.py  test_binary_junction_exadis.py  test_binary_junction_old.py  test_binary_junction_pydis.py
examples/03_paradis/: makefile  paradis_default.ctrl  paradis_default.data  test_paradis.py  test_send_nodes_to_paradis.py
examples/10_strain_hardening/: 180chains_16.10e.data  test_strain_hardening_exadis.py
examples/11_restart_calculation/: test_restart_exadis.py
extentions/paradis/: Makefile
installation/: download.html  index.html  requirements.html
installation/compilation/: compilation_overview.html  compile_on_cms3.html  compile_on_mac.html  compile_on_mc3.html  compile_on_rpi.html  compile_on_sherlock.html  compile_on_termux.html  compile_on_ubuntu.html  index.html
lib/: .gitignore
python/: calforce_disnet.py  collision_disnet.py  compute_stress_analytic_paradis.py  compute_stress_force_analytic_paradis.py  dd_proto.py  disnet.py  makefile  sim_disnet.py  timeint_disnet.py  vis_disnet.py
python/base_classes/: disnet_base.py
python/framework/: calforce_base.py  collision_base.py  disnet_base.py  disnet_manager.py  mobility_base.py
python/pydis/: disnet.py
src/: Makefile  README.md  SegSegForce.c  SegSegForce.h  SegSegForce_SBN1.c  SegSegForce_SBN1.h  SegSegForce_SBN1_SBA.c  SegmentStress.h  StressDueToSeg.c  opendis.h
tests/test1_node_force/: makefile  ref_seg_stress.npy  seg_data.npy  test_disnet_loop_force.py  test_loop_force.py  test_seg_stress.py  test_segseg_force.py
tests/test2_topol_op/: makefile  test_loop_topol_op.py
tutorials/: index.html  initial_configuration.html  setting_simulation.html  visualizing_dislocations.html
tutorials/01_initial_configurations/: initial_configurations.py
tutorials/01_mobility_law/: test_mob_frank_read_src_pydis.py  (+1 more)
(+245 files in other folders)
